--- a/zkplib/build.gradle
+++ b/zkplib/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    api 'com.google.code.gson:gson:2.8.5'
-    api 'com.blankj:utilcode:1.19.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.blankj:utilcodex:1.25.1'
 }
