--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,15 +33,16 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.blankj:utilcodex:1.25.1'
+    implementation project(':zkplib')
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    implementation 'com.blankj:utilcodex:1.25.1'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-
-    // -> butter knife
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'com.jakewharton:butterknife:10.1.0'
 }
