--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ android {
     greendao {
         schemaVersion 1 //数据库版本号
         daoPackage 'com.zkp.breath.database.greendao.entitydao' // 设置DaoMaster、DaoSession、Dao 包名
-        targetGenDir 'src.main.java'//设置DaoMaster、DaoSession、Dao目录,请注意，这里路径用.不要用/
+        // 下面的targetGenDir注销，不然会出现WARNING: API 'variant.getJavaCompiler()' is obsolete and has been replaced with 'variant.getJavaCompileProvider()'.
+        // 解决方案：https://blog.csdn.net/shijianduan1/article/details/86509825
+//        targetGenDir 'src.main.java'//设置DaoMaster、DaoSession、Dao目录,请注意，这里路径用.不要用/
         generateTests false //设置为true以自动生成单元测试。
         targetGenDirTests 'src/main/java' //应存储生成的单元测试的基本目录。默认为 src / androidTest / java。
     }
