--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,15 +47,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation project(':zkplib')
 
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation 'com.blankj:utilcodex:1.25.1'
@@ -71,8 +70,6 @@ dependencies {
 
     implementation 'org.greenrobot:greendao:3.2.2' // add library
 
-    implementation 'com.github.bumptech.glide:glide:3.8.0'
-
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
@@ -81,6 +78,9 @@ dependencies {
 
     // sp升级版框架（基于内存映射原理）
     implementation 'com.tencent:mmkv:1.0.23'
+
+    // BaseRecyclerViewAdapterHelper
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.49-androidx'
 }
 repositories {
     mavenCentral()
