--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.3.50'
     repositories {
         google()
         jcenter()
         mavenCentral()
         maven { url 'https://maven.google.com' }
+
+        //阿里自己的
+        maven { url "http://maven.aliyun.com/nexus/content/repositories/releases" }
+        //maven仓库
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        //谷歌
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        //mavenCentral
+        maven { url 'https://maven.aliyun.com/repository/central' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
@@ -24,7 +33,21 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+
+        //maven仓库
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        //google
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        //mavenCentral
+        maven { url 'https://maven.aliyun.com/repository/central' }
     }
+}
+
+ext {
+    //SDK的配置
+    compileSdkVersion = 29
+    minSdkVersion = 23
+    targetSdkVersion = 29
 }
 
 task clean(type: Delete) {
