--- a/build.gradle
+++ b/build.gradle
@@ -4,21 +4,11 @@ buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
         google()
-        jcenter()
-        mavenCentral()
-        maven { url 'https://maven.google.com' }
-
-        //阿里自己的
-        maven { url "http://maven.aliyun.com/nexus/content/repositories/releases" }
-        //maven仓库
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        //谷歌
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        //mavenCentral
-        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url "https://jitpack.io" }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
@@ -31,15 +21,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        maven { url 'https://jitpack.io' }
-
-        //maven仓库
-        maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        //google
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        //mavenCentral
-        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url "https://jitpack.io" }
+        maven{url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
 }
 
