添加IntentService的例子

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
         <activity android:name=".component.activity.MvpActivity" />
 
         <service
+            android:name=".component.service.IntentServiceA"
+            android:exported="false" />
+
+        <service
             android:name=".component.service.IntentServiceB"
             android:exported="false" />
 
