--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation 'com.blankj:utilcodex:1.25.1'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
     implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
