--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
     }
 
     // MVVM框架所需，进行v和vm的双向自动响应的绑定
-    dataBinding{
+    dataBinding {
         enabled true
     }
 }
@@ -53,6 +53,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
     testImplementation 'junit:junit:4.12'
+    // 模拟框架（一般用于jvm的单元测试隔离android库的依赖）
+    testImplementation 'org.mockito:mockito-core:2.19.0'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
