升级gradle版本和插件版本，使用viewbinding功能替换finviewbyid

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.greenrobot.greendao' // apply plugin
 
 android {
@@ -46,6 +46,11 @@ android {
     dataBinding {
         enabled true
     }
+
+    viewBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
