启动删除无效资源必须启动混淆，否则编译报错

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
     buildTypes {
         release {
             // 混淆
-            minifyEnabled false
+            minifyEnabled true
             // 移除无用的resource文件
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
