--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,4 +102,6 @@ dependencies {
 
     // 浏览器查看sp或者数据库神器
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.3'
 }
