--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,17 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.gradle_version = '3.6.1'
     repositories {
         google()
         maven { url "https://jitpack.io" }
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
-        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
     }
 }
 
