--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         <activity android:name=".component.activity.mvx.MvvmActivity" />
         <activity android:name=".component.activity.DatabaseActivity" />
         <activity android:name=".component.activity.LeakCanaryActivity" />
-        <activity android:name=".component.activity.animotor.LayoutTransitionActivity" />
+        <activity android:name=".component.activity.animator.LayoutTransitionActivity" />
 
         <service
             android:name=".component.service.IntentServiceA"
