添加圆形揭露动画作用在view上的例子

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".component.activity.LeakCanaryActivity" />
         <activity android:name=".component.activity.animator.LayoutTransitionActivity" />
         <activity android:name=".component.activity.animator.ViewPropertyAnimatorActivity" />
+        <activity android:name=".component.activity.animator.CircularRevealActivity" />
 
         <service
             android:name=".component.service.IntentServiceA"
