--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,34 +20,107 @@
         <!--设计稿基准宽高-->
         <meta-data
             android:name="design_width_in_dp"
-            android:value="360"/>
+            android:value="360" />
         <meta-data
             android:name="design_height_in_dp"
-            android:value="640"/>
+            android:value="640" />
 
         <activity android:name=".component.activity.ActivitySplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity" />
-        <activity android:name=".component.activity.EventActivity" />
-        <activity android:name=".component.activity.ActivityB" />
-        <activity android:name=".component.activity.ActivityA" />
-        <activity android:name=".component.activity.ActivityCoordinator" />
-        <activity android:name=".component.activity.mvx.MvcActivity" />
-        <activity android:name=".component.activity.mvx.MvpActivity" />
-        <activity android:name=".component.activity.mvx.MvvmActivity" />
-        <activity android:name=".component.activity.DatabaseActivity" />
-        <activity android:name=".component.activity.performance.MemoryShakeActivity" />
-        <activity android:name=".component.activity.performance.LeakCanaryActivity" />
-        <activity android:name=".component.activity.performance.BlockCanaryActivity" />
-        <activity android:name=".component.activity.animator.LayoutTransitionActivity" />
-        <activity android:name=".component.activity.animator.ViewPropertyAnimatorActivity" />
-        <activity android:name=".component.activity.animator.CircularRevealActivity" />
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.EventActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.ActivityB">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.ActivityA">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.ActivityCoordinator">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.mvx.MvcActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.mvx.MvpActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.mvx.MvvmActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.DatabaseActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.performance.MemoryShakeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.performance.LeakCanaryActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.performance.BlockCanaryActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.animator.LayoutTransitionActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.animator.ViewPropertyAnimatorActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".component.activity.animator.CircularRevealActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
 
         <service
             android:name=".component.service.IntentServiceA"
