--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,6 +110,9 @@ dependencies {
     // 基于今日头条适配方案的屏幕适配库
     implementation 'me.jessyan:autosize:1.2.1'
 
+    // disklrucache
+    implementation 'com.jakewharton:disklrucache:2.0.2'
+
     // 浏览器查看sp或者数据库神器
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
 
@@ -118,4 +121,5 @@ dependencies {
 
     // 界面卡顿工具
     debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
+
 }
