--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,17 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.greenrobot.greendao'
+//apply from: 'tinkerpatch.gradle'
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('signature/breath.jks')
+            storePassword '123456'
+            keyAlias = 'key'
+            keyPassword '123456'
+        }
+    }
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
         applicationId "com.zkp.breath"
@@ -125,4 +134,6 @@ dependencies {
     // 界面卡顿工具
     debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
 
+//    annotationProcessor("com.tinkerpatch.tinker:tinker-android-anno:1.9.13")
+//    implementation("com.tinkerpatch.sdk:tinkerpatch-android-sdk:1.2.13")
 }
