--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,6 +133,7 @@ dependencies {
 
     // 界面卡顿工具
     debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
+    releaseImplementation 'com.github.markzhai:blockcanary-no-op:1.5.0'
 
 //    annotationProcessor("com.tinkerpatch.tinker:tinker-android-anno:1.9.13")
 //    implementation("com.tinkerpatch.sdk:tinkerpatch-android-sdk:1.2.13")
