--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.greenrobot.greendao'
+apply plugin: 'kotlin-kapt'
 
 android {
     signingConfigs {
@@ -61,11 +62,12 @@ android {
     }
 
     greendao {
-        schemaVersion 1 //数据库版本号
+        //数据库版本号
+        schemaVersion 1
         // 设置DaoMaster、DaoSession、Dao 包名
         daoPackage 'com.zkp.breath.database.greendao'
-        //设置DaoMaster、DaoSession、Dao目录,请注意，这里路径用.不要用/
-        //targetGenDir 'src.main.java'
+        //设置DaoMaster、DaoSession、Dao目录,请注意，这里路径用/不要用.
+        targetGenDir 'src/main/java'
         //设置为true以自动生成单元测试。
         generateTests false
         //应存储生成的单元测试的基本目录。默认为 src / androidTest / java。
@@ -94,6 +96,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    kapt "com.android.databinding:compiler:$gradle_version"
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
