--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,7 +96,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    kapt "com.android.databinding:compiler:$gradle_version"
+    kapt "androidx.databinding:databinding-compiler-common:$gradle_version"
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
@@ -151,3 +151,7 @@ dependencies {
     releaseImplementation 'com.github.markzhai:blockcanary-no-op:1.5.0'
 
 }
+
+//kapt {
+//    generateStubs = true
+//}
