--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,6 +128,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".component.activity.androidr.ScopedStorageActivity"/>
+
         <service
             android:name=".component.service.IntentServiceA"
             android:exported="false" />
