--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,12 @@ android {
             // 设置支持的SO库架构
             abiFilters 'arm64-v8a', 'armeabi-v7a'
         }
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
     }
     buildTypes {
         release {
@@ -141,6 +147,10 @@ dependencies {
 
     // disklrucache
     implementation 'com.jakewharton:disklrucache:2.0.2'
+
+    // 阿里路由
+    implementation'com.alibaba:arouter-api:1.3.1'
+    annotationProcessor'com.alibaba:arouter-compiler:1.1.4'
 
     // 浏览器查看sp或者数据库神器
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
