添加router携带参数的跳转例子

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -135,6 +135,7 @@
 
         <activity android:name=".component.activity.arouter.ARouterActivity" />
         <activity android:name=".component.activity.arouter.Test1ArouterActivity" />
+        <activity android:name=".component.activity.arouter.Test2ArouterActivity" />
 
 
         <service
