添加kotlin的协程例子

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -146,10 +146,14 @@
                     android:host="m.aliyun.com"
                     android:scheme="arouter" />
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".component.activity.kotlin.CoroutinesActivity" />
+
 
         <service
             android:name=".component.service.IntentServiceA"
