--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.3.61'
     ext.kotlin_coroutines = '1.1.1'
-    ext.gradle_version = '3.6.1'
+    ext.gradle_version = '3.6.3'
     repositories {
         google()
         jcenter()
@@ -11,7 +11,7 @@ buildscript {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "com.android.tools.build:gradle:${gradle_version}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
