--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -154,6 +155,7 @@
 
         <activity android:name=".component.activity.kotlin.CoroutinesActivity" />
 
+        <activity android:name=".component.activity.AudioRecordActivity" />
 
         <service
             android:name=".component.service.IntentServiceA"
