--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,6 +173,12 @@ dependencies {
     debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
     releaseImplementation 'com.github.markzhai:blockcanary-no-op:1.5.0'
 
+
+    // 友盟基础组件库（所有友盟业务SDK都依赖基础组件库）
+    implementation "com.umeng.umsdk:common:2.1.0"
+    // 友盟统计SDK
+    implementation "com.umeng.umsdk:analytics:8.1.3"
+
 }
 
 //kapt {
