--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,9 +31,12 @@
             android:name="design_height_in_dp"
             android:value="640" />
 
+        <!--UM友盟：appkey和channel-->
         <meta-data
             android:name="UMENG_APPKEY"
             android:value="5eb27e0adbc2ec0856ab2f34" />
+        <!--每台设备仅记录首次安装激活的渠道，在其他渠道再次安装不会重复计量。
+         所以在测试不同的渠道的时候，请使用不同的设备来分别测试-->
         <meta-data
             android:name="UMENG_CHANNEL"
             android:value="Breath" />
