--- a/app/build.gradle
+++ b/app/build.gradle
@@ -178,7 +178,10 @@ dependencies {
     implementation "com.umeng.umsdk:common:2.1.0"
     // 友盟统计SDK
     implementation "com.umeng.umsdk:analytics:8.1.3"
-
+    //PushSDK必须依赖utdid库，所以需要加入对应依赖
+    implementation 'com.umeng.umsdk:utdid:1.1.5.3'
+    //PushSDK
+    implementation 'com.umeng.umsdk:push:6.0.1'
 }
 
 //kapt {
