--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,7 +150,7 @@ dependencies {
     implementation 'com.tencent:mmkv:1.0.23'
 
     // BaseRecyclerViewAdapterHelper
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.49-androidx'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.2'
 
     // 基于今日头条适配方案的屏幕适配库
     implementation 'me.jessyan:autosize:1.2.1'
