--- a/app/build.gradle
+++ b/app/build.gradle
@@ -184,6 +184,11 @@ dependencies {
 
     // material-dialogs
     implementation 'com.afollestad.material-dialogs:core:3.2.1'
+
+    // SmartRefreshLayout
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'
+    //没有使用特殊Header，可以不加这行
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.2'
 }
 
 //kapt {
