--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -174,6 +174,8 @@
 
         <activity android:name=".component.activity.MaterialDialogsActivity" />
 
+        <activity android:name=".component.activity.GlideActivity" />
+
         <service
             android:name=".component.service.IntentServiceA"
             android:exported="false" />
