--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -178,6 +178,8 @@
 
         <activity android:name=".component.activity.MMKVActivity" />
 
+        <activity android:name=".component.activity.ActivityFragment" />
+
         <service
             android:name=".component.service.IntentServiceA"
             android:exported="false" />
