添加viewmodel的例子

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -180,6 +180,8 @@
 
         <activity android:name=".component.activity.FragmentDemoActivity" />
 
+        <activity android:name=".component.activity.ViewModelActivity" />
+
         <service
             android:name=".component.service.IntentServiceA"
             android:exported="false" />
