--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,11 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines"
     kapt "androidx.databinding:databinding-compiler-common:$gradle_version"
 
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
     implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation project(':zkplib')
