--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.71'
     ext.kotlin_coroutines = '1.1.1'
     ext.gradle_version = '3.6.3'
+    ext.lifecycle_version = "2.2.0"
     repositories {
         google()
         jcenter()
