--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -182,6 +182,8 @@
 
         <activity android:name=".component.activity.ViewModelActivity" />
 
+        <activity android:name=".component.activity.LifecycleActivity" />
+
         <service
             android:name=".component.service.IntentServiceA"
             android:exported="false" />
