--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -181,8 +181,8 @@
         <activity android:name=".component.activity.FragmentDemoActivity" />
 
         <activity android:name=".component.activity.jetpack.ViewModelActivity" />
-
         <activity android:name=".component.activity.jetpack.LifecycleActivity" />
+        <activity android:name=".component.activity.jetpack.LiveDataActivity" />
 
         <service
             android:name=".component.service.IntentServiceA"
