添加room的依赖

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,11 @@ dependencies {
     // alternately - if using Java8, use the following instead of lifecycle-compiler
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
