--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.gradle_version = '3.6.3'
     ext.lifecycle_version = "2.2.0"
     ext.room_version = "2.2.5"
+    ext.work_version = "2.3.4"
     repositories {
         google()
         jcenter()
