--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     sourceSets {
         main {
             java.srcDirs = ['src/main/java', 'src/main/aidl']
