--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
+        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.didichuxing.doraemonkit:doraemonkit-plugin:3.1.5'
     }
 }
 
